# dayz-discord-bot

./: Cargo.toml
src/: main.rs  service.rs
