[package]
name = "dayz-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.10"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"